--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,5 +1,5 @@
 /*
-    https://www.modularscale.com/?1&em&1.25
+    https://www.modularscale.com/?1&em&1.30
     Major Third
 */
 
@@ -31,10 +31,10 @@ body{
 
 .overlay{
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(1, 1, 1, 0.1);
     display: flex;
     height: 100%;
-    justify-content: center;
+    justify-content: space-evenly;
     position: fixed;
     width: 100%;
 }
@@ -67,9 +67,9 @@ body{
 }
 
 .text-input li label{
-    font-size: 1.25em; /* Modular Scale */
-    font-weight: 300;
-    padding-bottom: 0.3em;
+    font-size: 1.35em; /* Modular Scale */
+    font-weight: 400;
+    padding-bottom: 0.5em;
 }
 
 .text-input li input{
@@ -101,12 +101,12 @@ button, input[type="checkbox"]{
 }
 
 button{
-    background-color: #6381bc;
+    background-color: #0856ee;
     border: 0;
-    border-radius: 0.2em;
+    border-radius: 0.5em;
     color: #ffffff;
-    font-size: 1.01em;
-    padding: 0.5em;
+    font-size: 1.30em;
+    padding: 0.6em;
 }
 
 .error{
