--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,7 +1,3 @@
-/*
-    https://www.modularscale.com/?1&em&1.30
-    Major Third
-*/
 
 html, body{
     height: 100%;
@@ -50,7 +46,7 @@ body{
 }
 
 .sign-in h2{
-    font-size: 1.563em; /* Modular Scale */
+    font-size: 1.563em; 
     width: max-content;
     padding: 0 0 1em 0;
     margin: 0 auto;
@@ -63,7 +59,7 @@ body{
 }
 
 .text-input li label{
-    font-size: 1.35em; /* Modular Scale */
+    font-size: 1.20em; 
     font-weight: 400;
     padding-bottom: 0.5em;
 }
