--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,4 +1,3 @@
-
 html, body{
     height: 100%;
 }
@@ -65,7 +64,7 @@ body{
 }
 
 .text-input li input{
-    border:1px solid darkgrey;
+    border:1px solid #c3bfbf;
     font-size: 1em;
     outline: 0;
     padding: 0.5em 0.1em 0.5em 0.5em;
