--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -6,7 +6,7 @@ body{
     background-image: url("../images/homepage-800.jpg");
     background-repeat: no-repeat;
     background-size: 100vw 100vh;
-    font-family: 'Roboto', sans-serif;
+    font-family:'Roboto', Arial, sans-serif;
 }
 
 @media screen and (min-width: 800px) {
