--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,102 +1,138 @@
-html, body{
-    height: 100%;
+html {
+  height: 100%;
+  background-image: url("../images/homepage-800.jpg");
+  background-repeat: no-repeat;
+  background-size: 100vw 100vh;
+  font-family: 'Roboto', Arial, sans-serif;
 }
 
-body{
-    background-image: url("../images/homepage-800.jpg");
-    background-repeat: no-repeat;
-    background-size: 100vw 100vh;
-    font-family:'Roboto', Arial, sans-serif;
+body {
+  /* Base styles for all screen sizes */
+  font-size: 16px;
+  line-height: 1.5;
 }
 
+/* Styles for screens wider than 800px */
 @media screen and (min-width: 800px) {
-    body{
-        background-image: url("../images/homepage-1200 .jpg");
-    }
-}
+  body {
+    font-size: 18px;
+    line-height: 1.6;
+  }
 
-@media screen and (min-width: 1200px) {
-    body{
-        background-image: url("../images/homepage-1200 .jpg");
-    }
-    .check-input li{
-        padding-right: 7.5em;
-    }
-}
-
-.overlay{
-    align-items: center;
-    background-color: rgba(1, 1, 1, 0.1);
-    display: flex;
-    height: 100%;
-    justify-content: space-evenly;
-    position: fixed;
-    width: 100%;
-}
-
-.sign-in{
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    height: max-content;
-    padding: 1.1em 1.1em 1.1em 1.1em;
-    max-width: 70em;
-    border-radius: 0.2em;
-}
-
-.sign-in h2{
-    font-size: 1.563em; 
-    width: max-content;
-    padding: 0 0 1em 0;
+  .container {
+    max-width: 800px;
     margin: 0 auto;
-}
+  }
 
-.text-input li{
+  .header {
     display: flex;
-    flex-direction: column;
-    padding-bottom: 1em;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  /* Only styles that need to change at 800px go here */
+  html {
+    background-image: url("../images/homepage-1200.jpg");
+  }
 }
 
-.text-input li label{
-    font-size: 1.20em; 
-    font-weight: 400;
-    padding-bottom: 0.3em;
+/* Styles for screens wider than 1200px */
+@media screen and (min-width: 1200px) {
+  body {
+    font-size: 20px;
+    line-height: 1.8;
+  }
+
+  .container {
+    max-width: 1200px;
+  }
+
+  .header {
+    padding: 1em;
+    background-color: #333;
+    color: #fff;
+  }
+
+  .nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .nav ul {
+    display: flex;
+    list-style: none;
+  }
+
+  .nav li {
+    margin-right: 1em;
+  }
+  
+  /* Only styles that need to change at 1200px go here */
+  html {
+    background-image: url("../images/homepage-1200.jpg");
+  }
+  
+  .check-input li {
+    padding-right: 7.5em;
+  }
 }
 
-.text-input li input{
-    border:1px solid #c3bfbf;
-    font-size: 1em;
-    outline: 0;
-    padding: 0.4em 0.1em 0.4em 0.4em;
+.overlay {
+  align-items: center;
+  background-color: rgba(1, 1, 1, 0.1);
+  display: flex;
+  height: 100%;
+  justify-content: space-evenly;
+  position: fixed;
+  width: 100%;
 }
 
-.text-input li input:focus-visible{
-    border:1px solid #c3bfbf;
+.sign-in {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  height: max-content;
+  padding: 1.1em 1.1em 1.1em 1.1em;
+  max-width: 70em;
+  border-radius: 0.2em;
 }
 
-.check-input li{
-    font-size: 1.1em;
-    padding-bottom: 0.7em;
+.sign-in h2 {
+  font-size: 1.563em; 
+  width: max-content;
+  padding: 0 0 1em 0;
+  margin: 0 auto;
 }
 
-.check-input input, .check-input label{
-    font-size: 0.8em;
+.text-input li {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 1em;
 }
 
-button, input[type="checkbox"]{
-    cursor: pointer;
+.text-input li label {
+  font-size: 1.20em; 
+  font-weight: 400;
+  padding-bottom: 0.3em;
 }
 
-button{
-    background-color: #0856ee;
-    border: 0;
-    border-radius: 0.5em;
-    color: #ffffff;
-    font-size: 1.30em;
-    padding: 0.6em;
+.text-input li input {
+  border:1px solid #c3bfbf;
+  font-size: 1em;
+  outline: 0;
+  padding: 0.4em 0.1em 0.4em 0.4em;
 }
 
-.error{
-    color: #f50707;
-    font-size: 0.9em;
+.text-input li input:focus-visible {
+  border:1px solid #c3bfbf;
 }
+
+.check-input li {
+  font-size: 1.1em;
+  padding-bottom: 0.7em;
+}
+
+.check-input input,
+.check-input label {
+  font-size: 
