--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -101,7 +101,6 @@ body {
 .sign-in h2 {
   font-size: 1.563em; 
   width: max-content;
-  padding: 0 0 1em 0;
   margin: 0 auto;
 }
 
@@ -114,14 +113,13 @@ body {
 .text-input li label {
   font-size: 1.20em; 
   font-weight: 400;
-  padding-bottom: 0.3em;
 }
 
 .text-input li input {
   border:1px solid #c3bfbf;
   font-size: 1em;
   outline: 0;
-  padding: 0.4em 0.1em 0.4em 0.4em;
+  padding: 0.1em 0.1em 0.1em 0.1em;
 }
 
 .text-input li input:focus-visible {
@@ -135,4 +133,4 @@ body {
 
 .check-input input,
 .check-input label {
-  font-size: 
+  font-size: initial;
